Fixed spacing for multiple signatures

--- a/doc_source/sphinx/python-package-mods/rtd-theme/theme.css
+++ b/doc_source/sphinx/python-package-mods/rtd-theme/theme.css
@@ -7,6 +7,11 @@ html{box-sizing:border-box}*,:after,:before{box-sizing:inherit}article,aside,det
      font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,Courier,monospace;
      margin-bottom: 0;
      background: #fff;
+     overflow: auto;
+ }
+
+ #description .syntax {
+     margin-bottom: 0;
  }
 
  .rst-content .package-links a {
